fixes paragraph tag on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1207,7 +1207,7 @@
 			
 			section.one p {
 				text-align: left;
-				width: 100%;
+				width: 90%;
 				margin: 0 auto;
 				padding: 10px 0;
 				font-size: 18px;
